--- a/NetCore/appsettings.json
+++ b/NetCore/appsettings.json
@@ -5,7 +5,9 @@
     }
   },
   "ConnectionStrings": {
-    "Default": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename='|DataDirectory|\\TournamentsContext.mdf';Integrated Security=True"
+    "Default": "Data Source='Localhost';Initial Catalog= TournamentsDB;Integrated Security=True"
   },
+  "JWTSecretKey": "bRhYJRlZvBj2vW4MrV5HVdPgIE6VMtCFB0kTtJ1m",
+  "JWTLifespan": 2592000,
   "AllowedHosts": "*"
 }
